tests/fixtures/invalid/variadic_function_parameter.c
int sum(int count, ...) { return count; }
int main(void) { return sum(1, 2); }
